# learning_kalman_filters

./: .gitignore  README.md
average_filter/: Average Filter.ipynb
average_filter/.ipynb_checkpoints/: Average Filter-checkpoint.ipynb
average_filter/libkalmanutils/: CMakeLists.txt
average_filter/libkalmanutils/include/kalmanutils/: average_filter.h
average_filter/libkalmanutils/libs/Logger/: CMakeLists.txt
average_filter/libkalmanutils/libs/Logger/include/Logger/: logger.h
average_filter/libkalmanutils/libs/Logger/src/: logger.cpp
average_filter/libkalmanutils/src/: average_filter.cpp  main.cpp  voltage_model.cpp  voltage_model.h
